Fix contrast issues on header button

--- a/css/arrow.css
+++ b/css/arrow.css
@@ -55,7 +55,7 @@ table, tr, td, th {
 }
 
 /*18181b BACKGROUND*/
-body, .header-button {
+body, .header-button.button {
     background-color: #d6cfc9;
 }
 /*1f1f1f BACKGROUND*/
