--- a/css/classic.css
+++ b/css/classic.css
@@ -66,7 +66,7 @@ body {
     background-color: #d5cfcf;
 }
 /*222222 BACKGROUND*/
-.header-button, #url-upload button, #text-add button, #add-tier-button, #add-tier-colour, #urlselect, #text-select, #add-tier, .menu-button, .hidden button, .menu-button, header button:hover {
+.header-button.button, #url-upload button, #text-add button, #add-tier-button, #add-tier-colour, #urlselect, #text-select, #add-tier, .menu-button, .hidden button, .menu-button, header button:hover {
     background-color: #d5cfcf;
     border: outset #eeecdf !important;
     color: black !important;
